k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudappdev-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudappdev-frontend
  template:
    metadata:
      labels:
        app: cloudappdev-frontend
    spec:
      serviceAccountName: cloudappdev-sa
      containers:
        - name: frontend
          image: europe-west1-docker.pkg.dev/oceanic-citadel-474512-c1/docker-repo/cloudappdev:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
