k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudappdev-frontend
spec:
  selector:
    app: cloudappdev-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
