k8s/test.yaml
---
# Source: social/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: test-social
  labels:
    helm.sh/chart: social-1.1.0
    app.kubernetes.io/name: social
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: social-svc-port
  selector:
    app.kubernetes.io/name: social
    app.kubernetes.io/instance: test
---
# Source: social/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: test-social
  labels:
    helm.sh/chart: social-1.1.0
    app.kubernetes.io/name: social
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: social
      app.kubernetes.io/instance: test
  template:
    metadata:
      labels:
        helm.sh/chart: social-1.1.0
        app.kubernetes.io/name: social
        app.kubernetes.io/instance: test
        app.kubernetes.io/version: "0.0.9"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: social-${namespace}-sa
      containers:
        - name: social
          image: "europe-west1-docker.pkg.dev/cloudappdev-dev/docker-repo/cloudappdev-social-service:0.0.9"
          imagePullPolicy: IfNotPresent
          ports:
            - name: social-port
              containerPort: 8082
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 1
            tcpSocket:
              port: 8082
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 8082
