k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: default
  annotations:
    networking.gke.io/certmap: cloudappdev-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: cloudappdev.site
    - name: http
      protocol: HTTP
      port: 80
      hostname: cloudappdev.site
