k8s/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudappdev-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
  hostnames:
    - cloudappdev.site
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cloudappdev-frontend
          port: 3000
